What's new...

Jan 2/2020 : JF 18.9.0 released
  - webui
    - fix JSON stringify()
  - jfBackup/0.9
    - add email notification

Dec 30/2019 : JF 18.8.0 released
  - XML loader now supports UTF-8
  - jfPasswords/0.21
    - fix : support UTF-8

Dec 29/2019 : JF 18.7.0 released
  - jfBackup/0.8
    - fix : reset tape used at start of backup

Dec 18/2019 : JF 18.6.0 released
  - jfBackup/0.7
    - fix : NPE client side
    - UI improvements

Dec 13/2019 : JF 18.5.0 released
  - jfBackup/0.6
    - fix : close file after restore (gc would have got it eventually)

Dec 13/2019 : JF 18.4.0 released
  - jfBackup/0.5
    - greatly improved performance
    - successfully backed up a remote 250GB volume in under 9 hrs

Dec 11/2019 : JF 18.3.0 released
  - fix : jfBackup/0.4
    - fixed major issues - it actually works now
    - greatly improved performance by directly writting data to tape drive instead of using intermidiate temp files
      - windows was attempting to cache all disk I/O even swapping the kernel to disk to do this - wtf right ?

Dec 6/2019 : JF 18.2.0 released
  - fix : jfBackup/0.3
    - client connection issues

Dec 5/2019 : JF 18.1.0 released
  - new : jfPaint/0.23
    - added selection alpha toggle
    - added crop selection button
  - fix : jfBackup/0.2
    - minor fixes

Dec 4/2019 : JF 18.0.0 released
  - new app : jfBackup/0.1
    - Enterprise Tape Backup Solution
    - Volume Shadow Backup
    - Multiple Servers
    - Backup to tape drive/media changer (barcodes supported)
    - Web interface
    - when corporate IT pulled our license for our company wide backup software I tried other
      open source solutions but they were all unacceptable so I build our own ;)
  - new app : jfDVR/0.0 (not released yet)
    - Records IP/RTSP cameras
    - due to performance issues this release is delayed until I can find a better JVM (maybe graal someday)

Mar 8/2019 : JF 17.5.0 released
  - fix : ffmpeg loading/saving issues
  - new : upgrade to ffmpeg/4.x